# graphready

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: pages.yml
benchmarks/: README.md
benchmarks/ocr/: RESULTS.md  benchmark_ocr.py  results.json
configs/: default.yaml
data/samples/: README.md  patients.csv
demo/: README.md  app.py  requirements.txt
docs/: ARCHITECTURE.md  EVALUATION.md  RESEARCH.md  ROADMAP.md
scripts/: deploy_space.py
site/: index.html
src/graphready/: __init__.py  cli.py
src/graphready/api/: __init__.py
src/graphready/confidence/: __init__.py
src/graphready/core/: __init__.py  model.py  orchestrator.py
src/graphready/entities/: __init__.py
src/graphready/feedback/: __init__.py
src/graphready/figures/: __init__.py
src/graphready/ingest/: __init__.py  detect.py
src/graphready/layout/: __init__.py
src/graphready/mapping/: __init__.py  package.py
src/graphready/normalize/: __init__.py
src/graphready/ocr/: __init__.py
src/graphready/ontology/: __init__.py
src/graphready/order/: __init__.py
src/graphready/perception/: __init__.py  base.py  chandra_engine.py  csv_engine.py  docling_engine.py
src/graphready/relations/: __init__.py
src/graphready/schema/: __init__.py
src/graphready/tables/: __init__.py
src/graphready/ui/: __init__.py
tests/: test_orchestrator.py  test_skeleton.py
